[package]
name = "unraid-mqtt-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "*", features = ["attributes"] }
tracing-subscriber = { version = "*", features = ["fmt", "env-filter"] }
tracing-log = "*"
anyhow = "1.0"
bollard = "0"
clap = { version = "4.4", features = ["derive", "env"] }
rumqttc = "0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sysinfo = "0"
tokio = { version = "1", features = ["full"] }
futures-util = "0"
toml = "*"
